# browser-use-prod-example

./: README.md  pyproject.toml
browser_agent/: main.py
browser_agent/app/: celery.py  config.py  types.py
browser_agent/app/browsers/: browser.py
browser_agent/app/projects/xhandles/: types.py
browser_agent/app/projects/xhandles/agents/: search_x_prospects.py  visit_x_profile.py
browser_agent/app/projects/xhandles/prompts/: search.py
browser_agent/app/projects/xhandles/tasks/: get_prospect_urls.py  search_x_prospects.py  visit_x_profile.py
